--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="/static/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
-    无胜利毋宁死
+    爆炎术
   </body>
   <script>
 
