--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link href="/static/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
-    
+
     <div>
-      <img src = "pay.png">
+      <img src = "zyn.png">
       优秀的网站需要您的鼓励
     </div>
   </body>
