--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
 						<span class="menu"><img src="images/menu.png" alt=" " /></span>
 						<nav class="link-effect-3" id="link-effect-3">
 							<ul class="nav1 nav nav-wil">
-								<li class="active"><a data-hover="Home" href="index.html">Home</a></li>
-								<li><a class="scroll" data-hover="About" href="#about">About</a></li>
-								<li><a class="scroll" data-hover="Services" href="#services" >Services</a></li>
-								<li><a class="scroll" data-hover="Experience" href="#work">Experience</a></li>
-								<li><a class="scroll" data-hover="Portfolio" href="#port">Portfolio</a></li>
-								<li><a class="scroll" data-hover="Blog" href="#blogs">Blog</a></li>
-								<li><a class="scroll" data-hover="Contact" href="#contact">Contact</a></li>
+								<li class="active"><a data-hover="" href="index.html">基本信息</a></li>
+								<li><a class="scroll" data-hover="" href="#about">能力分析</a></li>
+								<li><a class="scroll" data-hover="" href="#services" >技能树</a></li>
+								<li><a class="scroll" data-hover="" href="#work">核心项目</a></li>
+								<li><a class="scroll" data-hover="" href="#port">薪资曲线</a></li>
+								<li><a class="scroll" data-hover="" href="#blogs">成长历程</a></li>
 							</ul>
 						</nav>
 							<!-- script-for-menu -->
@@ -263,8 +262,8 @@
 	<div id="work" class="work">
 		<div class="container">
 			<div class="service-head text-center">
-						<h4>WHAT I DID</h4>
-						<h3>MY <span>EXPERIENCE</span></h3>
+						<h4>项目经验</h4>
+
 						<span class="border one"></span>
 					</div>
 					<div class="time-main w3l-agile">
@@ -801,14 +800,11 @@
 <!-- //for bootstrap working -->
 	<script src="js/bootstrap.js"></script>
   <script>
-  // 基于准备好的dom，初始化echarts实例
+    // 基于准备好的dom，初始化echarts实例
     var myChart = echarts.init(document.getElementById('main'));
-
     // 指定图表的配置项和数据
     var option = {
-
         tooltip: {},
-
         radar: {
             // shape: 'circle',
             name: {
