--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Home</title>
+<title>ZhangYinan</title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -70,44 +70,44 @@
 				</div>
 			<div class="banner-info">
 				<div class="col-md-7 header-right">
-					<h1>Hi !</h1>
-					<h6>UX & UI DESIGNER</h6>
+					<h1>张一男</h1>
+					<h6>前端工程师 & U3D工程师 & U3D技术顾问 & Web全栈工程师</h6>
 					<ul class="address">
 
 					<li>
 							<ul class="address-text">
-								<li><b>NAME</b></li>
-								<li>I'M ROB LEE</li>
+								<li><b>姓名</b></li>
+								<li>张一男</li>
+							</ul>
+					</li>
+						<li>
+							<ul class="address-text">
+								<li><b>出生年月</b></li>
+								<li>1992-03</li>
 							</ul>
 						</li>
 						<li>
 							<ul class="address-text">
-								<li><b>D.O.B</b></li>
-								<li>23-06-1980</li>
+								<li><b>微信号 </b></li>
+								<li>asdf18249042841</li>
 							</ul>
 						</li>
 						<li>
 							<ul class="address-text">
-								<li><b>PHONE </b></li>
-								<li>+00 111 222 3333</li>
-							</ul>
-						</li>
-						<li>
-							<ul class="address-text">
-								<li><b>ADDRESS </b></li>
-								<li>756 Global Place,New York.</li>
+								<li><b>地址 </b></li>
+								<li>北京朝阳</li>
 							</ul>
 						</li>
 						<li>
 							<ul class="address-text">
 								<li><b>E-MAIL </b></li>
-								<li><a href="mailto:example@mail.com"> mail@example.com</a></li>
+								<li> zhangyinan@ettech.com.cn</a></li>
 							</ul>
 						</li>
 						<li>
 							<ul class="address-text">
-								<li><b>WEBSITE </b></li>
-								<li><a href="#">www.myresume.com</a></li>
+								<li><b>博客地址 </b></li>
+								<li><a href="https://www.jianshu.com/u/bd82743997dc">https://www.jianshu.com/u/bd82743997dc</a></li>
 							</ul>
 						</li>
 
@@ -128,7 +128,7 @@
 					<div id="owl-demo1" class="owl-carousel owl-carousel2">
             <div class="item">
             	<div class="about-left-grid">
-									<h2>Hi! I'm <span>Rob Lee</span></h2>
+									<h2>前端专业技能</h2>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis.</p>
 									<ul>
 										<li><a class="a-btn-a scroll" href="#port">My Work</a></li>
@@ -137,18 +137,48 @@
 								</div>
             </div>
               <div class="item">
-            	<div class="about-left-grid">
-          				<h2>Hi! I'm <span>Rob Lee</span></h2>
+              	<div class="about-left-grid">
+            				<h2>技术问题解决</h2>
+            				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis.</p>
+            				<ul>
+            					<li><a class="a-btn-a scroll" href="#port">My Work</a></li>
+            					<li><a class="a-btn-h scroll" href="#contact">Hire Me</a></li>
+            				</ul>
+            		</div>
+            </div>
+              <div class="item">
+              	<div class="about-left-grid">
+          				<h2>模块化分析和复用设计</h2>
           				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis.</p>
           				<ul>
           					<li><a class="a-btn-a scroll" href="#port">My Work</a></li>
           					<li><a class="a-btn-h scroll" href="#contact">Hire Me</a></li>
           				</ul>
           			</div>
-            </div>
+					    </div>
               <div class="item">
               	<div class="about-left-grid">
-          				<h2>Hi! I'm <span>ROB LEE</span></h2>
+          				<h2>文档阅读和新技术学习</h2>
+          				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis.</p>
+          				<ul>
+          					<li><a class="a-btn-a scroll" href="#port">My Work</a></li>
+          					<li><a class="a-btn-h scroll" href="#contact">Hire Me</a></li>
+          				</ul>
+          			</div>
+					    </div>
+              <div class="item">
+              	<div class="about-left-grid">
+          				<h2>进度评估和风险预测</h2>
+          				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis.</p>
+          				<ul>
+          					<li><a class="a-btn-a scroll" href="#port">My Work</a></li>
+          					<li><a class="a-btn-h scroll" href="#contact">Hire Me</a></li>
+          				</ul>
+          			</div>
+					    </div>
+              <div class="item">
+              	<div class="about-left-grid">
+          				<h2>团队组织与合作</h2>
           				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis.</p>
           				<ul>
           					<li><a class="a-btn-a scroll" href="#port">My Work</a></li>
@@ -277,68 +307,65 @@
 								   <div class="clearfix"></div>
 								</ul>
 							</div>
-					                        <ul class="col-md-6 timeline">
-																<li>
-																  <div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
-																  <div class="timeline-panel">
-																	<div class="timeline-heading">
-																	  <h4 class="timeline-title">COMPANY NAME</h4>
-																	</div>
-																	<div class="timeline-body">
-																	  <p>Lorem ipsum dolor sit amet.Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus </p>
-																	</div>
-																  </div>
-																</li>
+                  <ul class="col-md-6 timeline">
+										<li>
+										  <div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
+										  <div class="timeline-panel">
+											<div class="timeline-heading">
+											  <h4 class="timeline-title">COMPANY NAME</h4>
+											</div>
+											<div class="timeline-body">
+											  <p>Lorem ipsum dolor sit amet.Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus </p>
+											</div>
+										  </div>
+										</li>
 
-																<li>
-																  <div class="timeline-badge primary"><i class="glyphicon glyphicon-briefcase"></i></div>
-																  <div class="timeline-panel">
-																	<div class="timeline-heading">
-																	  <h4 class="timeline-title">COMPANY NAME</h4>
-																	</div>
-																	<div class="timeline-body">
-																	  <p>Lorem ipsum dolor sit amet.Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus </p>
-																	</div>
-																  </div>
-																</li>
+										<li>
+										  <div class="timeline-badge primary"><i class="glyphicon glyphicon-briefcase"></i></div>
+										  <div class="timeline-panel">
+											<div class="timeline-heading">
+											  <h4 class="timeline-title">COMPANY NAME</h4>
+											</div>
+											<div class="timeline-body">
+											  <p>Lorem ipsum dolor sit amet.Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus </p>
+											</div>
+										  </div>
+										</li>
+										<li>
+										  <div class="timeline-badge danger"><i class="glyphicon glyphicon-briefcase"></i></div>
+										  <div class="timeline-panel">
+											<div class="timeline-heading">
+											  <h4 class="timeline-title">COMPANY NAME</h4>
+											</div>
+											<div class="timeline-body">
+											  <p>Lorem ipsum dolor sit amet.Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus </p>
+											</div>
+										  </div>
+										</li>
 
-
-
-																<li>
-																  <div class="timeline-badge danger"><i class="glyphicon glyphicon-briefcase"></i></div>
-																  <div class="timeline-panel">
-																	<div class="timeline-heading">
-																	  <h4 class="timeline-title">COMPANY NAME</h4>
-																	</div>
-																	<div class="timeline-body">
-																	  <p>Lorem ipsum dolor sit amet.Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus </p>
-																	</div>
-																  </div>
-																</li>
-
-																<li>
-																  <div class="timeline-badge success"><i class="glyphicon glyphicon-briefcase"></i></div>
-																  <div class="timeline-panel">
-																	<div class="timeline-heading">
-																	  <h4 class="timeline-title">COMPANY NAME</h4>
-																	</div>
-																	<div class="timeline-body">
-																	  <p>Lorem ipsum dolor sit amet.Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus </p>
-																	</div>
-																  </div>
-																</li>
-																<li>
-																  <div class="timeline-badge pass"><i class="glyphicon glyphicon-briefcase"></i></div>
-																  <div class="timeline-panel">
-																	<div class="timeline-heading">
-																	  <h4 class="timeline-title">COMPANY NAME</h4>
-																	</div>
-																	<div class="timeline-body">
-																	  <p>Lorem ipsum dolor sit amet.Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus </p>
-																	</div>
-																  </div>
-																</li>
-															</ul>
+										<li>
+										  <div class="timeline-badge success"><i class="glyphicon glyphicon-briefcase"></i></div>
+										  <div class="timeline-panel">
+											<div class="timeline-heading">
+											  <h4 class="timeline-title">COMPANY NAME</h4>
+											</div>
+											<div class="timeline-body">
+											  <p>Lorem ipsum dolor sit amet.Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus </p>
+											</div>
+										  </div>
+										</li>
+										<li>
+										  <div class="timeline-badge pass"><i class="glyphicon glyphicon-briefcase"></i></div>
+										  <div class="timeline-panel">
+											<div class="timeline-heading">
+											  <h4 class="timeline-title">COMPANY NAME</h4>
+											</div>
+											<div class="timeline-body">
+											  <p>Lorem ipsum dolor sit amet.Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus </p>
+											</div>
+										  </div>
+										</li>
+									</ul>
 								<div class="clearfix"></div>
 								</div>
 						</div>
