--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 											</div>
 											<div class="timeline-body">
 											  <p>
-                          第一前后端分离的项目，使用reack框架，antd的UI组件。能源管控中心是重构中海油的原有节能系统.18年初，开始参与这个项目的调研与设计，今年6月
+                          第一个前后端分离的项目，使用react框架，antd的UI组件。能源管控中心是重构中海油的原有节能系统.18年初，开始参与这个项目的调研与设计，今年6月
                           开始开发，70%的前端功能由我负责。目前正在进行中。
                         </p>
 											</div>
